--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,15 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run:
-        - name: Build trainees docker image
-        - command: |
+          name: Build trainees docker image
+          command: |
             TAG=$CIRCLE_BRANCH-$CIRCLE_BUILD_NUM
             docker build -t dockerfordevs:$TAG
       - run:
-        - name: Run trainees docker image
-        - command: |
+          name: Run trainees docker image
+          command: |
             docker run --name dockerfordevs$TAG dockerfordevs:$TAG
       - run:
-        - name: Health check!
-        - command: |
+          name: Health check!
+          command: |
             echo | docker exec dockerfordevs$TAG curl -sb -H http://0.0.0.0
