--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           name: Build trainees docker image
           command: |
             TAG=$CIRCLE_BRANCH-$CIRCLE_BUILD_NUM
-            docker build -t dockerfordevs:$TAG
+            docker build -t dockerfordevs:$TAG ~/training/
       - run:
           name: Run trainees docker image
           command: |
