--- a/angular/Dockerfile
+++ b/angular/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:lts-jessie
 
-COPY . /app
+COPY ./package.json /app/package.json
+COPY ./package-lock.json /app/package-lock.json
 WORKDIR app
 
 RUN npm install
