--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "4200:4200"
     volumes:
+      - /app/node_modules/
       - ./angular:/app
   backend:
     build: ./rails
@@ -13,5 +14,5 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./rails:/app
       - /app/tmp/
+      - ./rails:/app
